# churnops-mlops-platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
airflow/dags/: churnops_training.py
configs/: base.yaml  fixture.yaml
deploy/kubernetes/addons/monitoring-operator/: kustomization.yaml  servicemonitor.yaml
deploy/kubernetes/base/: deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/overlays/production/: deployment-patch.yaml  kustomization.yaml  namespace.yaml  pvc-patch.yaml  runtime.env
deploy/kubernetes/overlays/staging/: deployment-patch.yaml  kustomization.yaml  namespace.yaml  pvc-patch.yaml  runtime.env
docker/: entrypoint.sh
docker/airflow/: Dockerfile  init.sh
docs/: architecture.md
docs/release-notes/: v0.1.0.md
monitoring/grafana/dashboards/: churnops-inference-observability.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
src/churnops/: __init__.py  config.py  runtime_logging.py
src/churnops/api/: __init__.py  app.py  dependencies.py  middleware.py  routes.py  schemas.py
src/churnops/artifacts/: __init__.py  persistence.py
src/churnops/config/: __init__.py  loader.py  models.py  runtime.py
src/churnops/data/: __init__.py  ingestion.py  validation.py
src/churnops/drift/: __init__.py  baseline.py  detector.py  loader.py  models.py  monitor.py  retraining.py  storage.py
src/churnops/features/: __init__.py  preprocessing.py
src/churnops/inference/: __init__.py  exceptions.py  loader.py  models.py  service.py
src/churnops/models/: __init__.py  evaluation.py  training.py
src/churnops/monitoring/: __init__.py  metrics.py  middleware.py  prometheus.py
src/churnops/orchestration/: __init__.py  airflow.py  models.py  stage_store.py  training_tasks.py
src/churnops/pipeline/: __init__.py  runner.py  train.py
src/churnops/tracking/: __init__.py  mlflow.py  models.py  service.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_drift.py  test_ingestion.py  test_monitoring.py  test_orchestration.py  test_preprocessing.py  test_runner.py  test_tracking.py  test_training_pipeline.py  test_validation.py
tests/fixtures/: customer_churn.csv
